--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
+    "react-hot-toast": "^2.5.2",
     "react-pdf": "^9.2.1",
     "react-router-dom": "^7.6.1",
     "tailwindcss-animate": "^1.0.7",
