add admin panel

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@apollo/client": "^3.13.8",
     "@hookform/resolvers": "^5.0.1",
+    "@mui/icons-material": "^7.1.1",
+    "@mui/material": "^7.1.1",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-select": "^2.2.5",
@@ -19,7 +21,10 @@
     "clsx": "^2.1.1",
     "lodash": "^4.17.21",
     "pdfjs-dist": "^5.3.31",
+    "ra-data-graphql": "^5.8.3",
+    "ra-data-json-server": "^5.8.3",
     "react": "^19.1.0",
+    "react-admin": "^5.8.3",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
     "react-hot-toast": "^2.5.2",
